# azure-tools

./: .gitignore  README.md  pyproject.toml
src/azure_tools/: aml.py  main.py
