[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure_tools"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "azureml-core",
    "humanize",
    "loguru",
    "setuptools",  # required by azureml-core
    "typer",
]

[project.entry-points.console_scripts]
aml = "azure_tools.main:app"

[tool.ruff.lint.isort]
force-single-line = true
